--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <li><strong>Email:</strong> <a href="mailto:kssathwik@outlook.com">kssathwik@outlook.com</a></li>
             <li><strong>Phone:</strong> <a href="tel:+12017059409">+1 (201) 705-9409</a></li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/sathwik-kuchana/" target="_blank">linkedin.com/in/sathwik-kuchana</a></li>
-            <li><strong>GitHub:</strong> <a href="https://github.com/" target="_blank">github.com/ &larr; sathwikkuchana007</a></li>
+            <li><strong>GitHub:</strong> <a href="https://github.com/sathwikkuchana007" target="_blank">github.com/sathwikkuchana007</a></li>
           </ul>
         </div>
         <form class="card contact-form" action="mailto:kssathwik@outlook.com" method="post" enctype="text/plain">
